--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body{
     font-family: 'Playfair Display', serif;
-    background-image: url(/HTML&CSS/templetes/assets/food-bg.jpg);
+    background-image: url(assets/food-bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     min-height: 100vh;
